# funding-service-design-authenticator

./: .flaskenv  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  api.yaml  api.yml  app.py  babel.cfg  build.py  config.py  gunicorn.config.dev.py  gunicorn.config.local.py  manifest-dev-gids.yml  manifest-dev.yml  manifest-test.yml  manifest.yml  messages.pot  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  static_assets.py  tasks.py
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml  copilot.yml  copilot_deploy.yml  deploy.yml  environment.yml  package.yml  s3-zip.yaml  tag-to-release.yaml  tag-to-release.yml
api/: __init__.py  responses.py
api/demo/: routes.py
api/demo/templates/: demo_index.html  login.html
api/magic_links/: routes.py
api/session/: auth_session.py  data.py  exceptions.py
api/session/models/: account.py  application.py
api/sso/: routes.py
auth/: msal.py  oauth2-proxy-localhost.cfg  oauth2-proxy.cfg
common/: blueprints.py
config/: __init__.py  babel.cfg  default.py  dev.py  development.py  env.py  production.py  test.py  unit_test.py  utils.py
config/environments/: default.py  dev.py  development.py  local.py  production.py  test.py  unit_test.py
config/envs/: default.py  dev.py  development.py  production.py  test.py  unit_test.py
config_files/: .env.default  .env.dev  .env.development  .env.production  .env.test
copilot/fsd-authenticator/: manifest.yml
demo/: routes.py
demo/templates/: auth_error.html  demo_index.html  login.html
docs/: README.md
frontend/: assets.py
frontend/default/: routes.py
frontend/magic_links/: filters.py  forms.py  routes.py
frontend/sso/: routes.py
frontend/templates/: 404.html  500.html  base.html  footer.html  head.html  header.html  index.html
frontend/user/: routes.py
gunicorn/: config.dev.py  config.test.py
models/: account.py  application.py  data.py  fund.py  magic_link.py  notification.py  round.py
openapi/: api.yaml  api.yml  components.yml
run/gunicorn/: config.devtest.py  config.local.py
scripts/: graph_auth.py
security/: utils.py
swagger/custom/3_52_0/: index.j2
testing/mocks/: route_testing_conf.py  utils.py
tests/: conftest.py  helpers.py  route_testing_conf.py  test_accessibility.py  test_account.py  test_content.py  test_errors.py  test_filters.py  test_fund.py  test_healthchecks.py  test_magic_links.py  test_notification.py  test_routes.py  test_security.py  test_signout.py  test_signout_get.py  test_sso.py  utils.py
tests/api_data/: endpoint_data.json  get_endpoint_data.json  post_endpoint_data.json  put_endpoint_data.json
tests/mocks/: __init__.py  application_methods.py  live_server.py  msal.py  redis_magic_links.py  redis_sessions.py  selenium_chrome_driver.py
utils/: definitions.py  logging.py
(+38 files in other folders)
