[project]
name = "funding-service-design-authenticator"
version = "0.1.1"
description = "The funding service design authenticator for the DLUHC."
authors = ["Version One"]
license = "MIT License"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "connexion==2.14.2",
    "cssmin==0.2.0",
    "email-validator==1.2.1",
    "flask-assets==2.0",
    "flask-compress==1.14",
    "flask-redis==0.4.0",
    "flask-session==0.4.0",
    "flask-talisman==0.8.1",
    "flask-wtf==1.2.1",
    "flask==2.2.5",
    "funding-service-design-utils==5.1.*",
    "govuk-frontend-jinja==2.3.0",
    "greenlet>=3.1.1",
    "jsmin==3.0.1",
    "msal==1.28.0",
    "openapi-spec-validator>=0.7.1",
    "prance>=23.6.21.0",
    "pyjwt==2.4.0",
    "pyscss==1.4.0",
    "requests>=2.32.3",
]

[tool.black]
line-length = 120
experimental-string-processing = 1

[tool.flake8]
max-line-length = 120
count = true

[tool.uv]
dev-dependencies = [
    "beautifulsoup4>=4.12.3",
    "black>=24.10.0",
    "debugpy>=1.8.7",
    "deepdiff>=8.0.1",
    "dparse>=0.5.2",
    "flake8-pyproject>=1.2.3",
    "invoke>=2.2.0",
    "moto>=5.0.18",
    "pip-tools>=6.13.0",
    "pre-commit~=4.0.0",
    "pytest>=8.3.3",
    "pytest-env>=1.1.5",
    "pytest-flask>=1.3.0",
    "pytest-mock==3.10.0",
    "pytest-selenium==2.0.1",
    "selenium==4.23.1",
    "swagger-ui-bundle>=1.1.0",
    "webdriver-manager==4.0.1",
]
